add jvm parameter setting